# Document-OCR

./: .pre-commit-config.yaml  LICENSE  Procfile  README.md  isort.cfg  pyproject.toml  requirements-dev.txt  requirements.txt
app/: app.py  models.py  ocr.py  utils.py
