[tool.poetry]
name = "Document OCR"
version = "0.1.0"
description = "Python web application for documents OCR"
authors = ["Keshav Sain <keshav.sain@bitxiatech.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.81.0"
uvicorn = "^0.18.3"
Markdown = "^3.4.1"
pytesseract = "^0.3.10"
numpy = "^1.23.2"
opencv-python = "^4.6.0"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
isort = "^5.10.1"
black = "^22.6.0"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
